solved overflow

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@
 }
 body {
   background: #252525;
-    color: #ebe4e4;
-  
+  color: #ebe4e4;
+  overflow-x: hidden;
 }
 /* nav starts */
 .introduction_container{
